--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   uuid: ^4.5.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
